[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "queuectl"
version = "0.1.0"
description = "CLI-based background job queue with workers, retries, DLQ"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
"typer>=0.12",
"rich>=13.7",
]


[project.scripts]
queuectl = "queuectl.cli:app"


[tool.setuptools.packages.find]
where = ["."]
include = ["queuectl*"]